--- a/src/pages/cleaning.astro
+++ b/src/pages/cleaning.astro
@@ -78,16 +78,12 @@ import "../main.css";
 </BaseLayout>
 
 <style>
-  .container {
-    max-width: 1300px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
 
   .content-wrapper {
     display: flex;
     flex-direction: column;
     gap: 40px;
+    margin-bottom: 20px;
   }
 
   .section-block {
@@ -140,7 +136,7 @@ import "../main.css";
 
   .recommendation-item {
     /* background: #fafafa; */
-    padding: 20px;
+    padding: 0 20px;
 
     border-left: 5px solid rgb(172, 172, 172);
   }
@@ -173,6 +169,7 @@ import "../main.css";
 
     h4 {
       font-size: 16px;
+      margin-top: 0;
     }
 
     .text-block p {
