--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -44,6 +44,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 <style scoped>
 .about-page {
   background: #fff;
+  margin: 0 10px;
 }
 
 .hero {
@@ -81,6 +82,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   font-size: 1.2rem;
   line-height: 1.6;
   color: #333;
+  margin: 4px 0;
 }
 
 .specialization, .custom-order {
@@ -115,6 +117,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
   .subtitle {
     font-size: 1.2rem;
+  }
+  .text-content {
+    gap: 14px;
   }
 
   .lead {
