updated Blog order, header, mobile menu

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -60,8 +60,17 @@ const currentPath = Astro.url.pathname;
 			</div>
 		</div>
 
+
 		<div class="-container">
 			<div class="-socials">
+				<div class="link-mobile">
+					<a
+						href="/contacts"
+						class={currentPath === "/contacts/"
+							? "-link mobile active"
+							: "-link mobile "}>Контакты</a
+					>
+				</div>
 				<a href="https://www.instagram.com/tknortex/">
 					<Image class="-img" src={instagram} alt="" />
 				</a>
@@ -69,6 +78,7 @@ const currentPath = Astro.url.pathname;
 					<Image class="-img" src={telegram} alt="" />
 				</a>
 				<Image class="-img" src={whatsapp} alt="" />
+
 			</div>
 			<div class="-contacts">
 				<div class="-wrap">
@@ -94,6 +104,7 @@ const currentPath = Astro.url.pathname;
 				</div>
 			</div>
 		</div>
+
 	</div>
 </nav>
 <style>
@@ -143,6 +154,11 @@ const currentPath = Astro.url.pathname;
 				width: 110px;
 			}
 		}
+		.-link-mobile {
+			@media (min-width: 1367px) {
+				display: none;
+			}
+		}
 		.-links {
 			display: flex;
 			gap: 60px;
@@ -150,26 +166,35 @@ const currentPath = Astro.url.pathname;
 			@media (max-width: 1366px) {
 				display: none;
 			}
-
-			.-link {
-				color: #fff;
-				font-size: 16px;
-				text-decoration: none;
-				&.active {
-					color: aqua;
-				}
-				&:hover {
-					color: aqua;
-				}
+		}
+		.-link {
+			color: #fff;
+			font-size: 16px;
+			text-decoration: none;
+			&.mobile {
+				font-size: 14px;
+				margin-bottom: 5px;;
+			}
+			&.active {
+				color: aqua;
+			}
+			&:hover {
+				color: aqua;
 			}
 		}
 		.-socials {
 			display: flex;
 			gap: 24px;
+			@media (max-width: 768px) {
+				gap: 16px;
+			}
 			.-img {
 				height: 24px;
 				width: auto;
 				cursor: pointer;
+				@media (max-width: 768px) {
+					height: 20px;
+				}
 			}
 		}
 		.-contacts {
