--- a/src/pages/cleaning.astro
+++ b/src/pages/cleaning.astro
@@ -110,7 +110,7 @@ import "../main.css";
   h4 {
     font-size: 18px;
     color: #666;
-    margin-bottom: 15px;
+    margin-top: 0;
   }
 
   .text-block {
@@ -138,7 +138,7 @@ import "../main.css";
     /* background: #fafafa; */
     padding: 0 20px;
 
-    border-left: 5px solid rgb(172, 172, 172);
+    border-left: 2px solid rgb(172, 172, 172);
   }
 
   .img-container {
