Home page slider, categories title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,14 +14,14 @@ import Advantages from "../components/Advantages.astro";
 	<div class="container disable-bottom">
 		<div class="text xl">
 			НОРТЕКС предлагает широкий выбор высококачественных и
-			высокотехнологичных тканей от ведущих мировых производителей.
+			высокотехнологичных тканей от ведущих мировых производителей.<br/>
 			Уделяем особое внимание к соответствию цена/качество, предоставляем
 			ткани разных ценовых категорий, экологичных, износостойких, с
 			широким спектром цветов и применением новейших технологий при
 			производстве.
 		</div>
-		<div class="text">
-			Команда НОРТЕКС уже более 20 лет на рынке мебельных тканей. Наша
+		<div class="text"><br/>
+			Команда НОРТЕКС уже более 20 лет на рынке мебельных тканей. <br/>Наша
 			главная задача - соответствовать высочайшим стандартам качества и
 			обслуживания, успешно реализовать даже самые сложные запросы
 			клиентов.
@@ -45,9 +45,10 @@ import Advantages from "../components/Advantages.astro";
 
 <style scoped>
 	.text {
-		font-size: 16px;
-		max-width: 1800px;
+		font-size: 18px;
+		max-width: 1600px;
 		line-height: 32px;
+		color: rgb(40, 40, 40);
 		@media (max-width: 768px) {
 			line-height: 22px;
 			font-size: 12px;
@@ -57,7 +58,7 @@ import Advantages from "../components/Advantages.astro";
 			max-width: 1200px;
 		}
 		&.xl {
-			font-size: 24px;
+			font-size: 22px;
 			font-weight: 700;
 			@media (max-width: 768px) {
 				font-size: 14px;
