--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,6 @@
+:root {
+	--swiper-pagination-color: #fc7604;
+}
 .container {
 	display: flex;
 	flex-direction: column;
@@ -47,6 +50,9 @@ swiper-container {
 		font-size: 36px;
 	}
 	&.s { font-size: 32px;}
+	&.xs { 
+		font-size: 28px;
+	}
 }
 
 .spec {
@@ -102,12 +108,15 @@ swiper-container {
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	height: 800px;
+	height: 750px;
 	background-image: url("./assets/img/homeImage.jpg");
 	background-size: cover;
 	background-position: center;
 	@media (max-width: 768px) {
 		height: 400px;
+	}
+	&.textile {
+		background-image: url("./assets/img/homeImage2.jpg");
 	}
 	.-container {
 		display: flex;
@@ -134,6 +143,17 @@ swiper-container {
 			color: aliceblue;
 			font-size: 24px;
 			font-weight: 500;
+			cursor: pointer;
+			transition: 200ms;
+			&:hover {
+				transform: translateY(-2px); /* Slight upward movement */
+				box-shadow: 0 6px 12px rgba(252, 118, 4, 0.3); /* Enhanced shadow on hover */
+			  }
+			  
+			  &:active {
+				transform: translateY(1px); /* Pressed effect */
+				box-shadow: 0 2px 4px rgba(252, 118, 4, 0.2); /* Reduced shadow when clicked */
+			  }
 			@media (max-width: 768px) {
 				font-size: 16px;
 				width: 200px;
