--- a/src/pages/cleaning.astro
+++ b/src/pages/cleaning.astro
@@ -35,21 +35,27 @@ import "../main.css";
         <div class="recommendations-grid">
           <div class="recommendation-item">
             <h4>Регулярный уход</h4>
-            <p>- Если Вам необходимо очистить изделие от бытовой пыли и сухих частей, используйте сухую мягкую щётку.</p>
-            <p>- Категорически запрещается использовать пылесос и другие вакуумные устройства для чистки мягкой мебели. Вакуум способен вытягивать волокна ткани и «валять» поверхность. То есть на поверхности ткани будут образовываться шарики, так называемый пилинг. Кроме того, могут вытягиваться волокна основы ткани и волокна нетканых материалов наполнителей, расположенные непосредственно под тканью. Это ещё более ускоряет эффект старения ткани. Возможно также отслоение уточного слоя от основы в некоторых видах ткани.</p>
+            <div class="recommendation-content">
+              <p>- Если Вам необходимо очистить изделие от бытовой пыли и сухих частиц, используйте сухую мягкую щётку.</p>
+              <p>- Категорически запрещается использовать пылесос и другие вакуумные устройства для чистки мягкой мебели. Вакуум способен вытягивать волокна ткани и «валять» поверхность, что приводит к появлению «пилинга» и преждевременному старению.</p>
+            </div>
           </div>
-
+      
           <div class="recommendation-item">
             <h4>Запрещенные методы чистки</h4>
-            <p>- Строго запрещается использование отбеливателей, бензина, ацетона, уайт-спирита, растворителей, абразивных кислотосодержащих чистящих средств бытовой химии.</p>
-            <p>- Запрещается использовать для чистки скребки, острые предметы, губки с жёстким шершавым покрытием.</p>
-            <p>- Запрещается проводить по поверхности ткани острыми (режущими) предметами.</p>
+            <div class="recommendation-content">
+              <p>- Строго запрещается использование отбеливателей, бензина, ацетона, уайт-спирита, растворителей и абразивных кислотосодержащих средств.</p>
+              <p>- Не использовать для чистки скребки, острые предметы и губки с жёсткой поверхностью.</p>
+              <p>- Не проводить по ткани острыми (режущими) предметами.</p>
+            </div>
           </div>
-
+      
           <div class="recommendation-item">
             <h4>Удаление пятен</h4>
-            <p>- Очищать поверхность следует сразу после появления загрязнения. Если это жидкость, то необходимо собрать жидкость с помощью сухой, хорошо впитывающей жидкость мягкой тканью или губкой. Затем слегка влажной мягкой тканью пробуем собрать пятно от края к центру или по ворсу ткани. Возможно использование нейтрального бесцветного мыла. Не тереть!!! После этого, промокнуть место обработки сухой, мягкой тканью.</p>
-            <p>- Если источником загрязнения являются пасты (кетчуп, соус, йогурт...), то сначала необходимо собрать их с поверхности мягкой тряпкой без усилий, чтобы не загнать их в структуру ткани.</p>
+            <div class="recommendation-content">
+              <p>- Очищать поверхность следует сразу после появления загрязнения. Если это жидкость, аккуратно собрать её сухой, хорошо впитывающей тканью, затем слегка влажной мягкой тканью пробовать удалить пятно, двигаясь от края к центру, не тереть.</p>
+              <p>- Если загрязнение вызвано пастами (кетчуп, соус, йогурт), сначала собрать их с поверхности мягкой тряпкой без сильного давления.</p>
+            </div>
           </div>
         </div>
       </section>
@@ -108,6 +114,7 @@ import "../main.css";
   }
 
   h4 {
+    padding-left: 24px;
     font-size: 18px;
     color: #666;
     margin-top: 0;
@@ -135,11 +142,15 @@ import "../main.css";
   }
 
   .recommendation-item {
-    /* background: #fafafa; */
-    padding: 0 20px;
+  /* Убираем внутренние отступы и границу с самого контейнера */
+  padding: 0;
+}
 
-    border-left: 2px solid rgb(172, 172, 172);
-  }
+.recommendation-content {
+  border-left: 2px solid rgb(172, 172, 172);
+  padding-left: 20px;
+}
+
 
   .img-container {
     width: 100%;
