--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -9,7 +9,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   <div class="about-page">
     
     
-      <h1 class="title">Norteks</h1>
+      <h1 class="title">Нортекс</h1>
       <p class="subtitle">Оптовый поставщик декоративных тканей</p>
       <div class="container min">
         <div class="grid">
