--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -60,7 +60,9 @@ import "../main.css";
 
 <style scoped>
 
-
+    p {
+      font-size: 20px;
+    }
     .contact-container {
       max-width: 1200px;
       margin: 2rem auto;
@@ -83,6 +85,7 @@ import "../main.css";
       display: flex;
       align-items: flex-start;
       gap: 1rem;
+      font-size: 18px;
       margin-bottom: 1rem;
     }
 
@@ -104,5 +107,12 @@ import "../main.css";
       .contact-container {
         grid-template-columns: 1fr;
       }
+      p {
+        font-size: 16px;
+      }
+      .address, .phone, .email {
+        flex-direction: column;
+      }
+      
     }
   </style>
