--- a/src/main.css
+++ b/src/main.css
@@ -334,11 +334,17 @@ swiper-container {
 		font-size: 24px;
 		font-weight: 700;
 		margin-top: 12px;
+		@media (max-width: 768px) {
+			font-size: 16px;
+		}
 	}
 	.-description {
 		font-size: 16px;
 		font-weight: 500;
 		margin-top: 6px;
+		@media (max-width: 768px) {
+			font-size: 14px;
+		}
 	}
 
 }
