--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Advantages from "../components/Advantages.astro";
 ---
 
 <BaseLayout>
-	<Slider client:only/>
+	<Slider client:load/>
 	<div class="container disable-bottom">
 		<div class="text xl">
 			НОРТЕКС предлагает широкий выбор высококачественных и
