--- a/src/pages/collection.astro
+++ b/src/pages/collection.astro
@@ -4,5 +4,5 @@ import Collections from "../components/Collections.jsx";
 ---
 
 <BaseLayout>
-	<Collections client:load />
+	<Collections client:only />
 </BaseLayout>
