updated about, cleaning images

--- a/src/pages/cleaning.astro
+++ b/src/pages/cleaning.astro
@@ -155,6 +155,7 @@ import "../main.css";
   .img-container {
     width: 100%;
     display: flex;
+    gap: 5px;
     justify-content: space-between;
     margin: 20px 0 40px 0;
   }
